cmake_minimum_required(VERSION 3.0)
project(mypro)
include_directories("/home/lvtao/ndnSIM/ns-3/build")
include_directories("/home/lvtao/ndnSIM/ns-3/src/ndnSIM/ndn-cxx")
include_directories("/home/lvtao/ndnSIM/ns-3/build/ns3/ndnSIM")
include_directories("/home/lvtao/ndnSIM/ns-3/build/ns3/ndnSIM/NFD")
include_directories("/home/lvtao/ndnSIM/ns-3/build/ns3/ndnSIM/NFD/daemon")
set(CMAKE_BUILD_TYPE Debug)
file(GLOB SO_FILES "/home/lvtao/ndnSIM/ns-3/build/lib/*.so")
link_directories("home/lvtao/ndnSIM/ns-3/build/lib")

add_executable(test_simp  simple.cpp)
foreach(SO_FILE ${SO_FILES})
    target_link_libraries(test_simp PUBLIC ${SO_FILE})
    message(STATUS ${SO_FILE})
endforeach()